--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,6 @@
       "permanent": false
     }
   ],
-  "rewrites": [
-    { "source": "/display.json", "destination": "/display.json" },
-    { "source": "/.well-known/farcaster.json", "destination": "/display.json" }
-  ],
   "headers": [
     {
       "source": "/display.json",
@@ -25,7 +21,7 @@
       "headers": [
         { "key": "Content-Type", "value": "application/json; charset=utf-8" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Cache-Control", "value": "public, max-age=60, s-maxage=300" },
+        { "key": "Cache-Control", "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=600" },
         { "key": "X-Content-Type-Options", "value": "nosniff" }
       ]
     }
