--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,12 @@
   "rewrites": [
     {
       "source": "/",
-      "has": [
-        { "type": "query", "key": "miniApp", "value": "true" }
-      ],
+      "has": [{ "type": "query", "key": "miniApp", "value": "true" }],
       "destination": "/index.html"
-    }
-  ],
-  "redirects": [
+    },
     {
       "source": "/",
-      "missing": [
-        { "type": "query", "key": "miniApp", "value": "true" }
-      ],
-      "destination": "https://rosebud.ai/p/5102bebc-0421-43cf-bd9c-0f8110540509",
-      "permanent": false
+      "destination": "/index.html"
     }
   ],
   "headers": [
