--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,15 @@
     {
       "source": "/",
       "has": [{ "type": "query", "key": "miniApp", "value": "true" }],
-      "destination": "/index.html"
-    },
+      "destination": "/"
+    }
+  ],
+  "redirects": [
     {
       "source": "/",
-      "destination": "/index.html"
+      "missing": [{ "type": "query", "key": "miniApp", "value": "true" }],
+      "destination": "https://rosebud.ai/p/5102bebc-0421-43cf-bd9c-0f8110540509",
+      "permanent": false
     }
   ],
   "headers": [
